--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@ https://templatemo.com/tm-531-reflux
                                 <b>2025-05:</b> 3 papers on demonstating causal representation learning and causal lens in Diffusion model, LLM, and domain adaptation are accepted by <a href="https://icml.cc/">ICML'2025</a>.
                             </li>
                             <li style="margin: 5px;">
-                                <b>2025-04:</b> I give a talk at <a href="https://www.nus.edu.sg/">NUS</a> to discuss causal representation <a href="https://chengy12.github.io/files/Talk_CRL_in_Vision.pptx">[slides]</a>, thanks <a href="https://www.comp.nus.edu.sg/~xiaoxk/">Prof. Xiaokui Xiao</a> to host me!
+                                <b>2025-04:</b> I give a talk at <a href="https://www.nus.edu.sg/">NUS</a> to discuss causal representation in visual understaning <a href="https://chengy12.github.io/files/Talk_CRL_in_Vision.pptx">[slides]</a>, thanks <a href="https://www.comp.nus.edu.sg/~xiaoxk/">Prof. Xiaokui Xiao</a> to host me!
                             </li>
                             <li style="margin: 5px;">
-                                <b>2025-04:</b> I give a talk at <a href="https://www.ntu.edu.sg/">NTU</a> to discuss causal representation in visual understaning <a href="https://chengy12.github.io/files/Talk_CRL_in_Vision.pptx">[slides]</a>[slides]</a>, thanks <a href="https://dr.ntu.edu.sg/cris/rp/rp02343">Prof. Dacheng Tao</a> for the invitation!
+                                <b>2025-04:</b> I give a talk at <a href="https://www.ntu.edu.sg/">NTU</a> to discuss causal representation in visual understaning <a href="https://chengy12.github.io/files/Talk_CRL_in_Vision.pptx">[slides]</a>, thanks <a href="https://dr.ntu.edu.sg/cris/rp/rp02343">Prof. Dacheng Tao</a> for the invitation!
                             </li>
                             <li style="margin: 5px;">
                                 <b>2025-03:</b> SmartCLIP is selected as <b>Highlight </b> by <a href="https://cvpr.thecvf.com/">CVPR'2025</a>.
