--- a/index.html
+++ b/index.html
@@ -535,9 +535,30 @@ https://templatemo.com/tm-531-reflux
                         <p>
                             <ul id="list">
                                 <li style="margin: 5px;">
-                                    Shaoan Xie, Lingjing Kong, Yujia Zheng, Yu Yao, Zeyu Tang, Eric P. Xing, <strong>Guangyi Chen</strong>, Kun Zhang,
+                                    Shaoan Xie*, Lingjing Kong*, Yujia Zheng, Zeyu Tang, Eric P. Xing, <b>Guangyi Chen</b>, Kun Zhang,
+                                    <a href="https://openreview.net/pdf?id=hUHRTaTfvZ">Learning Vision and Language Concepts for Controllable Image Generation</a>,
+                                    <em>International Conference on Machine Learning  (<strong>ICML</strong>)</em>, 2025.
+                                    <p></p>
+                                </li>
+
+                                <li style="margin: 5px;">
+                                    Zeyu Tang*, Zhenhao Chen*, Xiangchen Song, Loka Li, Yunlong Deng, Yifan Shen, <b>Guangyi Chen</b>, Peter Spirtes, Kun Zhang,
+                                    <a href="https://openreview.net/pdf?id=p71VhJHAtq">Reflection-Window Decoding: Text Generation with Selective Refinement</a>,
+                                    <em>International Conference on Machine Learning  (<strong>ICML</strong>)</em>, 2025.
+                                    <p></p>
+                                </li>
+
+                                <li style="margin: 5px;">
+                                    Ignavier Ng*, Yan Li*, Zijian Li, Yujia Zheng, <strong>Guangyi Chen</strong>, Kun Zhang,
+                                    <a href="https://openreview.net/pdf?id=BuN4FX0iBr">A General Representation-Based Approach to Multi-Source Domain Adaptation</a>,
+                                    <em>International Conference on Machine Learning  (<strong>ICML</strong>)</em>, 2025.
+                                    <p></p>
+                                </li>
+
+                                <li style="margin: 5px;">
+                                    Shaoan Xie*, Lingjing Kong*, Yujia Zheng, Yu Yao, Zeyu Tang, Eric P. Xing, <strong>Guangyi Chen</strong>, Kun Zhang,
                                     <a href="https://openreview.net/pdf?id=FR0uXCjUT6"> SmartCLIP: Modular Vision-language Alignment with Identification Guarantees</a>,
-                                    <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2025.
+                                    <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2025 <strong style="color: #8c363e;">Highlight</strong>.
                                     <!-- <a href="https://github.com/Lingjing-Kong/extrapolation_experiments">[Code]</a> -->
                                     <p></p> 
                                 </li> 
