--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ https://templatemo.com/tm-531-reflux
                     <div class="news">
                         <p>
                             <li style="margin: 5px;">
-                                <b>2025-06:</b> I give a talk at <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a> <a href="https://chengy12.github.io/files/Talk_CRL_in_Vision.pptx">[slides]</a>, thanks <a href="https://fengleifan.github.io/Feng-Lei.Fan.github.io/about.html">Prof. Fenglei Fan </a> for the invitation!
+                                <b>2025-06:</b> I give a talk at <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, thanks <a href="https://fengleifan.github.io/Feng-Lei.Fan.github.io/about.html">Prof. Fenglei Fan </a> for the invitation!
                             </li>
                             <li style="margin: 5px;">
                                 <b>2025-05:</b> 3 papers on demonstating causal representation learning and causal lens in Diffusion model, LLM, and domain adaptation are accepted by <a href="https://icml.cc/">ICML'2025</a>.
