--- a/index.html
+++ b/index.html
@@ -97,13 +97,19 @@ https://templatemo.com/tm-531-reflux
                     <div class="news">
                         <p>
                             <li style="margin: 5px;">
+                                <b>2025-08:</b> I give a talk at <a href="https://ucsd.edu/">UCSD</a> to discuss causal representation learning and trustworthy AI <a href="https://docs.google.com/presentation/d/1FbqKxVXpwq6tDamWyx1ol_H6Omx5bqvJ/edit?usp=drive_link&ouid=104705358491780464889&rtpof=true&sd=true">[slides]</a>, thanks <a href="https://biweihuang.com/">Biwei </a> for the invitation!
+                            </li>
+                            <li style="margin: 5px;">
+                                <b>2025-08:</b> 1 paper on causal representation learning is accepted by TPAMI.
+                            </li>
+                            <li style="margin: 5px;">
                                 <b>2025-06:</b> I give a talk at <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a>, thanks <a href="https://fengleifan.github.io/Feng-Lei.Fan.github.io/about.html">Prof. Fenglei Fan </a> for the invitation!
                             </li>
                             <li style="margin: 5px;">
                                 <b>2025-05:</b> 3 papers on demonstating causal representation learning and causal lens in Diffusion model, LLM, and domain adaptation are accepted by <a href="https://icml.cc/">ICML'2025</a>.
                             </li>
                             <li style="margin: 5px;">
-                                <b>2025-04:</b> I give talks at <a href="https://www.ntu.edu.sg/">NTU</a> and <a href="https://www.nus.edu.sg/">NUS</a> to discuss causal representation in visual understaning <a href="https://chengy12.github.io/files/Talk_CRL_in_Vision.pptx">[slides]</a>, thanks <a href="https://dr.ntu.edu.sg/cris/rp/rp02343">Prof. Dacheng Tao</a> and <a href="https://www.comp.nus.edu.sg/~xiaoxk/">Prof. Xiaokui Xiao</a> for hosting me!
+                                <b>2025-04:</b> I give talks at <a href="https://www.ntu.edu.sg/">NTU</a> and <a href="https://www.nus.edu.sg/">NUS</a> to discuss causal representation in visual understaning <a href="https://docs.google.com/presentation/d/19CWe26XWibsuqw-MVU49WdS-kz2M6MAJ/edit?usp=drive_link&ouid=104705358491780464889&rtpof=true&sd=true">[slides]</a>, thanks <a href="https://dr.ntu.edu.sg/cris/rp/rp02343">Prof. Dacheng Tao</a> and <a href="https://www.comp.nus.edu.sg/~xiaoxk/">Prof. Xiaokui Xiao</a> for hosting me!
                             </li>
                             <li style="margin: 5px;">
                                 <b>2025-03:</b> SmartCLIP is selected as <b>Highlight </b> by <a href="https://cvpr.thecvf.com/">CVPR'2025</a>.
