--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ https://templatemo.com/tm-531-reflux
                             <li style="margin: 5px;">
                                 <b>2024-01:</b> 1 paper on graph representation learning is accepted by <a href="https://www2024.thewebconf.org/">WWW'2024</a>.
                             </li>
-                            <li style="margin: 5px;">
+<!--                             <li style="margin: 5px;">
                                 <b>2023-12:</b> 1 paper on prompt learning is accepted by <a href="https://aaai.org/aaai-conference/">AAAI'2024</a> as <strong>Oral</strong>.
                             </li>
                             <li style="margin: 5px;">
@@ -182,7 +182,7 @@ https://templatemo.com/tm-531-reflux
                             </li>
                             <li style="margin: 5px;">
                                 <b>2023-01:</b> 2 papers on prompt learning (<a href="https://arxiv.org/abs/2210.01253">PLOT</a> as <strong>Spotlight</strong>) and video understanding are accepted by <a href="https://iclr.cc/">ICLR'2023</a>.
-                            </li>
+                            </li> -->
 <!--                             <li style="margin: 5px;">
                                 <b>2022-11:</b> 1 paper on domain adaptation is accepted by <a href="https://aaai.org/Conferences/AAAI-23/">AAAI'2023</a> as <strong>Oral</strong>.
                             </li>
