update paper link of causal lens

--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@ https://templatemo.com/tm-531-reflux
                                 </li> 
                                 <li style="margin: 5px;">
                                     Lingjing Kong*, <strong>Guangyi Chen</strong>*, Petar Stojanov, Haoxuan Li, Eric P. Xing, Kun Zhang,
-                                    <a href="https://openreview.net/pdf/0fb6a5a5c946d67fa93344db03a2f0084c92bd3d.pdf"> Towards Understanding Extrapolation: a Causal Lens</a>,
+                                    <a href="https://arxiv.org/pdf/2501.09163"> Towards Understanding Extrapolation: a Causal Lens</a>,
                                     <em>Thirty-eighth Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>)</em>, 2024.
                                     <a href="https://github.com/Lingjing-Kong/extrapolation_experiments">[Code]</a>
                                     <p></p> 
