--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ https://templatemo.com/tm-531-reflux
                             <li style="margin: 5px;">
                               <b>2025-10:</b> Excited to release <a href="https://causal-verse.github.io/">CausalVerse</a>, a NeurIPS 2025 Spotlight! 🎉 
                               It’s the first comprehensive benchmark for causal representation learning with controllable, high-fidelity simulations.  
-                              Feel free to explore and use: <a href="https://causal-verse.github.io/">Project page</a>, 
+                              Welcome to join us to make CRL practical and powerful: <a href="https://causal-verse.github.io/">Project page</a>, 
                               <a href="https://huggingface.co/CausalVerse">Datasets</a>, and 
                               <a href="https://github.com/CausalVerse">Code</a>.
                             </li>
