--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ https://templatemo.com/tm-531-reflux
                     <div class="line-dec"></div>
                     <div class="left">
                         <p>
-                            I am a postdoctoral research fellow at CMU and a research scientist at MBZUAI. I currently co-lead the Causal Learning and Reasoning (CLeaR) Group with Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/"> Kun Zhang </a>. Prior to that, I received both my Ph.D. and B.S. degrees from Tsinghua University, advised by Prof. <a href="http://www.au.tsinghua.edu.cn/info/1110/1583.htm"> Jie Zhou </a> and Prof. <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/"> Jiwen Lu </a>. My research interests include causality, representation learning, and computer vision. A central focus of my current work is to develop principled and practical methods for learning meaningful visual representations that support recognization, understanding, generation, and reasoning.
+                            I am a research scientist at Cargenie Mellon University (CMU) and MBZUAI. I currently co-lead the Causal Learning and Reasoning (CLeaR) Group with Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/"> Kun Zhang </a>. Prior to that, I received both my Ph.D. and B.S. degrees from Tsinghua University, advised by Prof. <a href="http://www.au.tsinghua.edu.cn/info/1110/1583.htm"> Jie Zhou </a> and Prof. <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/"> Jiwen Lu </a>. My research interests include causality, representation learning, and computer vision. A central focus of my current work is to develop principled and practical methods for learning meaningful visual representations that support recognization, understanding, generation, and reasoning.
                         </p>
                         <p>
                             <b> I’m currently on the academic job market!</b>
@@ -99,9 +99,11 @@ https://templatemo.com/tm-531-reflux
                             <li style="margin: 5px;">
                               <b>2025-10:</b> Excited to release <a href="https://causal-verse.github.io/">CausalVerse</a>, a NeurIPS 2025 Spotlight! 🎉 
                               It’s the first comprehensive benchmark for causal representation learning with controllable, high-fidelity simulations.  
-                              Welcome to join us to make CRL practical and powerful: <a href="https://causal-verse.github.io/">Project page</a>, 
+                              Welcome to join us to make CRL practical and powerful: 
+                              <a href="https://arxiv.org/abs/2510.14049">Arxiv</a>, 
+                              <a href="https://causal-verse.github.io/">Project page</a>, 
                               <a href="https://huggingface.co/CausalVerse">Datasets</a>, and 
-                              <a href="https://github.com/CausalVerse">Code</a>.
+                              <a href="https://github.com/CausalVerse/CausalVerseBenchmark">Code</a>.
                             </li>
                             <li style="margin: 5px;">
                                 <b>2025-09:</b> 5 papers on causal representation learning, vision language model, and generative models are accepted by <a href="https://neurips.cc/">NeurIPS'2025</a>.
@@ -562,11 +564,11 @@ https://templatemo.com/tm-531-reflux
                                 </li>
                                 <li style="margin: 5px;">
                                   <b>Guangyi Chen</b>*, Yunlong Deng*, Peiyuan Zhu*, Yan Li*, Yifan Shen, Zijian Li, Kun Zhang,  
-                                  <a href="https://arxiv.org/pdf/2510.10xxx">CausalVerse: A Comprehensive Benchmark for Causal Representation Learning with Controllable High-Fidelity Simulations</a>,  
+                                  <a href="https://arxiv.org/abs/2510.14049">CausalVerse: A Comprehensive Benchmark for Causal Representation Learning with Controllable High-Fidelity Simulations</a>,  
                                   <em>Thirty-eighth Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>)</em>, 2025 <strong style="color: #8c363e;">Spotlight</strong>.
                                   <a href="https://causal-verse.github.io/">[Project Page]</a>  
                                   <a href="https://huggingface.co/CausalVerse">[Datasets]</a>  
-                                  <a href="https://github.com/CausalVerse">[Code]</a>
+                                  <a href="https://github.com/CausalVerse/CausalVerseBenchmark">[Code]</a>
                                   <p></p>
                                 </li>
                                 <li style="margin: 5px;">
