--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@ https://templatemo.com/tm-531-reflux
                     <div class="news">
                         <p>
                             <li style="margin: 5px;">
+                                <b>2025-11:</b> I have a wonderful visit to HongKong and give some talks on causal representation learning at <a href="https://www.hku.hk/">HKU</a>, <a href="https://www.cuhk.edu.hk/">CUHK</a>, <a href="https://hkust.edu.hk/">HKUST</a>, and <a href="https://www.hkbu.edu.hk/">HKBU</a>. Thanks so much to <a href="https://www.scifac.hku.hk/people/yin-guosheng">Prof. Yin Guosheng </a>, <a href="https://www.cse.cuhk.edu.hk/people/faculty/farzan-farnia/">Prof. Farzan Farnia </a>, <a href="https://seng.hkust.edu.hk/about/people/faculty/raymond-chi-wing-wong">Prof. Raymond Wong </a>, and <a href="https://bhanml.github.io/">Prof. Bo Han </a> for their hosts.
+                            </li>
+                            <li style="margin: 5px;">
                               <b>2025-10:</b> Excited to release <a href="https://causal-verse.github.io/">CausalVerse</a>, a NeurIPS 2025 Spotlight! 🎉 
                               It’s the first comprehensive benchmark for causal representation learning with controllable, high-fidelity simulations.  
                               Welcome to join us to make CRL practical and powerful: 
@@ -1299,6 +1302,7 @@ https://templatemo.com/tm-531-reflux
                 </div>
                 <div class="left">
                         <p>
+                            <li style="margin: 5px;"> World’s Top 2% Scientists, Stanford–Elsevier,  2025</li>
                             <li style="margin: 5px;"> Jiang Zhen Scholarship, Tsinghua University, 2020</li>
                             <li style="margin: 5px;"> 2nd place in Semi-Supervised Recognition Challenge at FGVC7, CVPR, 2020</li>
                             <li style="margin: 5px;"> Samsung Scholarship, 2019</li>
