--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@ https://templatemo.com/tm-531-reflux
                     <div class="news">
                         <p>
                             <li style="margin: 5px;">
+                                <b>2026-01:</b> I gave a tutorial at AAAI 2026 on representation learning for LLMs. The slides and paper list are available <a href="https://srl4llm.github.io/">[tutorials]</a>. Many thanks to <a href="https://hanqi-qi.github.io/">Hanqi</a> and <a href="https://jonathan-schwarz.github.io/">Jonathan</a> for their contributions to the success of the tutorial.
+                            </li>
+                            <li style="margin: 5px;">
                                 <b>2025-11:</b> I have a wonderful visit to HongKong and give some talks on causal representation learning at <a href="https://www.hku.hk/">HKU</a>, <a href="https://www.cuhk.edu.hk/">CUHK</a>, <a href="https://hkust.edu.hk/">HKUST</a>, and <a href="https://www.hkbu.edu.hk/">HKBU</a>. Thanks so much to <a href="https://www.scifac.hku.hk/people/yin-guosheng">Prof. Yin Guosheng </a>, <a href="https://www.cse.cuhk.edu.hk/people/faculty/farzan-farnia/">Prof. Farzan Farnia </a>, <a href="https://seng.hkust.edu.hk/about/people/faculty/raymond-chi-wing-wong">Prof. Raymond Wong </a>, and <a href="https://bhanml.github.io/">Prof. Bo Han </a> for their hosts.
                             </li>
                             <li style="margin: 5px;">
