--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@ https://templatemo.com/tm-531-reflux
                     <div class="news">
                         <p>
                             <li style="margin: 5px;">
+                                <b>2026-01:</b> 4 papers on causal representation learning, reasoning, causal discovery, and generative models are accepted by <a href="https://iclr.cc//">ICLR'2026</a>. We propose <strong style="color: #8c363e;">SR2</strong>, a framework that explains recurrent reasoning models (e.g., <a href="https://arxiv.org/abs/2506.21734">HRM</a>) through a selection mechanism <a href="https://arxiv.org/abs/2510.08222">[Paper]</a>, and <a href="https://github.com/dengyl20/SR2">[Code]</a>. 
+                            </li>
+                            <li style="margin: 5px;">
                                 <b>2026-01:</b> I gave a tutorial at AAAI 2026 on representation learning for LLMs. The slides and paper list are available <a href="https://srl4llm.github.io/">[tutorials]</a>. Many thanks to <a href="https://hanqi-qi.github.io/">Hanqi</a> and <a href="https://jonathan-schwarz.github.io/">Jonathan</a> for their contributions to the success of the tutorial.
                             </li>
                             <li style="margin: 5px;">
@@ -561,6 +564,39 @@ https://templatemo.com/tm-531-reflux
                     <div class="left">
                         <p>
                             <ul id="list">
+                                <li style="margin: 5px;">
+                                    Yunlong Deng, Boyang Sun, Yan Li, Zeyu Tang, Lingjing Kong, Kun Zhang, <b>Guangyi Chen</b>,  
+                                    <em>Selection, Reflection and Self-Refinement: Revisit Reasoning Tasks via a Causal Lens</em>,  
+                                    <em>International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2026.
+                                    <a href="https://arxiv.org/abs/2510.08222">[Paper]</a>
+                                    <a href="https://github.com/dengyl20/SR2">[Code]</a>
+                                    <p></p>
+                                </li>
+
+                                <li style="margin: 5px;">
+                                    Yifan Shen*, Peiyuan Zhu*, Zijian Li, Shaoan Xie, Namrata Deka, Zongfang Liu, Zeyu Tang, <b>Guangyi Chen</b>, Kun Zhang,  
+                                    <em>Controllable Video Generation with Provable Disentanglement</em>,  
+                                    <em>International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2026.
+                                    <a href="https://arxiv.org/pdf/2502.02690">[Paper]</a>
+                                    <p></p>
+                                </li>
+
+                                <li style="margin: 5px;">
+                                    Gongxu Luo, Loka Li, <b>Guangyi Chen</b>, Haoyue Dai, Kun Zhang,  
+                                    <em>Characterization and Learning of Causal Graphs with Latent Confounders and Post-treatment Selection from Interventional Data</em>,  
+                                    <em>International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2026.
+                                    <a href="https://arxiv.org/abs/2509.25800">[Paper]</a>
+                                    <p></p>
+                                </li>
+
+                                <li style="margin: 5px;">
+                                    Loka Li*, Wong Yu Kang*, Minghao Fu, <b>Guangyi Chen</b>, Zhenhao Chen, Gongxu Luo, Yuewen Sun, Salman Khan, Peter Spirtes, Kun Zhang,  
+                                    <em>PersonaX: Multimodal Datasets with LLM-Inferred Behavior Traits</em>,  
+                                    <em>International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2026.
+                                    <a href="https://arxiv.org/pdf/2509.11362">[Paper]</a>
+                                    <p></p>
+                                </li>
+
                                 <li style="margin: 5px;">
                                     Yunlong Deng*, <b>Guangyi Chen</b>*, Tianpei Gu, Lingjing Kong, Yan Li, Zeyu Tang, Kun Zhang,
                                     <a href="https://arxiv.org/pdf/2510.10487">Towards Self-Refinement of Vision-Language Models with Triangular Consistency</a>,
@@ -1411,7 +1447,7 @@ https://templatemo.com/tm-531-reflux
                                 <b>Publicity Chair:</b> for CLeaR 2023.
                             </li>
                             <li style="margin: 5px;">
-                                <b>Area Chair:</b> for ICLR 2026.
+                                <b>Area Chair:</b> for ICLR 2026, ICML 2026.
                             </li>
                             <!-- <li style="margin: 5px;">
                                 <b>Co-organizer:</b> The Third Workshop on Human Identification in Multimedia (HIM'19) at ICME<a href="http://ivg.au.tsinghua.edu.cn/him19/"> [website]</a>
